two section complete than push

--- a/index.html
+++ b/index.html
@@ -1,16 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first portfolio site</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <section>
-        <h1>Wellcome To</h1>
-        <h1><span>Md Shamim Mia </span>World</h1>
+    <section class="full-section1">
+        <div class="first-section-div">
+            <div>
+                <h1>Wellcome To</h1>
+                <h1><span class="namecolor">Md Shamim Mia </span>World</h1>
+                <div>
+                    <p><strong>Build Climber and Train Stopper</strong> </p>
+                </div>
+
+                <div>
+                    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for
+                        that work. That's why I am learning and mastering web development. I will not stop until I
+                        become the Web Development Hero.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, magnam inventore possimus
+                        eveniet asperiores pariatur ab obcaecati rerum repellat quos quaerat consequatur neque facere
+                        expedita assumenda atque vel iste explicabo nisi
+                    </p>
+                </div>
+            </div>
+            <h3><a href="https://web.programming-hero.com">HIRE ME</a></h3>
+        </div>
+        <div id="first-section-div2" class="first-section-div">
+            <img src="images/541099.JPG" alt="shamim">
+        </div>
+
+
     </section>
+    <section class="full-section2">
+        <div id="first-section-div3" class="first-section-div">
+            <img src="images/my-bg2.png" alt="shamim" height="600px" weight="700px">
+        </div>
+        <div id="dream-big-section" class="first-section-div">
+            <div>
+                <h1>Dream Big</h1>
+
+                <div>
+                    <p><strong>Become a web developerr</strong> </p>
+                </div>
+
+                <div>
+                    <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for
+                        that work. That's why I am learning and mastering web development. I will not stop until I
+                        become the Web Development Hero.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi, magnam inventore possimus
+                        eveniet asperiores pariatur ab obcaecati rerum repellat quos quaerat consequatur neque facere
+                        expedita assumenda atque vel iste explicabo nisi
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel debitis inventore velit enim!
+                        Consequuntur, eligendi aperiam? Quod adipisci facere cupiditate omnis maxime, ratione sint nihil
+                        voluptate dolorem ipsa corporis fugit architecto consectetur quam provident?
+                    </p>
+                </div>
+                <h3><a href="https://web.programming-hero.com">DOWNLOAD RESUME</a></h3>
+            </div>
+        </div>
+
+
+    </section>
+<section>
+<h1>Experiences</h1>
+
+</section>
 </body>
+
 </html>
